// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic_proto;

message Vector2 {
  double x = 1;
  double y = 2;
}
